--- a/1-Schemas/A-entity_record_schema/03_physical-location.yml
+++ b/1-Schemas/A-entity_record_schema/03_physical-location.yml
@@ -52,7 +52,7 @@ properties:
       - type: null
     read-only: true
 
-  address: 
+  service_address: 
     oneOf: 
       - $ref: MaximoServiceAddressObject
       - type: null
