--- a/1-Schemas/A-entity_record_schema/05_item_master.yml
+++ b/1-Schemas/A-entity_record_schema/05_item_master.yml
@@ -19,13 +19,13 @@ properties:
         P3_MVP: TBD
         form: long
         spec_ID: VkYgCtRPlx
-        type: automation
+        type: [automation]
         specification: |
           if (item_x.properties.commodity_or_commercial_product) = "commodity", then  
             the value of item_x.properties.name would be the semi-colon delimited concatenation of the following property values:
               - properties.class.properties.name
               - every non-empty class dependent specification values
-              - properties.supplementary_commodity_description
+              - properties.generic_commodity_description
           elif: (item_x.properties.commodity_or_commercial_product = "commercial product"), then: 
             the value of item_x.properties.name would be the semi-colon delimited concatenation of the following property values:
               - properties.class.properties.name
@@ -50,15 +50,13 @@ properties:
         checked_on: 2024-08-15
 
   rotating:
-    description: Signifies that instances of this item are tracked as serialized individuals.
+    description: Signifies that all instances of this item are tracked as serialized individuals.
     $ref: "./00_re-used_object_property_definitions.yml#/definitions/rotating_property_def" 
 
   material_item:
-    description: indicates that the item is a material item, which are handled in continuous quantities.
+    description: indicates that the item is a material item, which are handled or apportioned in continuous quantities.
     type: boolean
-    $comment: |
-      Concept of material: materials are often handled in continuous quantities. For example, you might purchase a certain length of piping or a volume of concrete, and you have to measure and cut or shape these materials to fit your project's requirements.
-  
+
   # GENERIC COMMODITY AND COMMERCIAL PRODUCT DEFINITION
 
   commodity_or_commercial_product:
@@ -69,7 +67,7 @@ properties:
       - commercial product
     RULE_SPEC:
       - name: a commercial product item record must have manufacturer's information
-        spec_ID: 01K1E8JE4G5T00RQP63S0BPJBV
+        spec_ID: EkYKhixcGg
         type: [constraint_or_validation] 
         specification: |
           If commodity_or_commercial_product = "commercial product", then the following properties must NOT be null:
@@ -77,7 +75,7 @@ properties:
             - make_and_model
         status: check 07/30
       - name: a commodity item cannot be subset of another commodity item
-        spec_ID: 01K1E9YNYCMZQ5SNTF14723TND
+        spec_ID: Nyxq3og9Mg
         type: [constraint_or_validation] 
         specification: |
           If commodity_or_commercial_product = "commodity", then the subset_of_commodity_item property value must be NULL.
@@ -86,10 +84,18 @@ properties:
 
   # GENERIC COMMODITY DESCRIPTION
   
-  supplementary_commodity_description:
+  generic_commodity_description:
     description: Supplementary description, in addition to the class value and class-dependent specification values, necessary to differentiate a commodity.
     type: string
-    $comment: Toronto Water is not using the UNSPSC or any other commodity taxonomy code for item identification, as Toronto Water's classification system plays the same functional-location and can be mapped to other taxonomies. 
+    $comment: Toronto Water is not using the UNSPSC or any other commodity taxonomy code for item identification, as Toronto Water's classification system plays that role.
+    RULE_SPEC:
+      - name: 
+        spec_ID:
+        type: [automation, UI_options_constraint, validation]
+        run_when:
+        specification: |
+           
+        note:
 
   # COMMERCIAL PRODUCT DESCRIPTION
 
@@ -103,27 +109,12 @@ properties:
       - type: array
         items:
           $ref: "./05_item_master.yml"
-    dev_note: 
-      P3_MVP: false
-      P1_label: 
-      DB: 
 
   # OTHER ITEMS DESCRIPTIONS
 
   item_format:
-    P3_MVP: false
-    description: Describes the format of the individual units (forming the inventory count)- for example, "can" "functional-location", "sheet", "object", "box", "bag",....
+    description: Describes the format of the individual units (forming the inventory count)- for example, "can" "roll", "sheet",....
     type: string
-
-  specification_data:
-    P3_MVP: false
-    type: object
-    description: is a set of specification property data. (The applicable properties are dependent on the definition made in the chosen class.)
-
-  cost_in_CAD:
-    P3_MVP: false
-    description: The expected cost of an each unit of the item.
-    type: number
 
   unit_of_issue:
     P3_MVP: false
@@ -141,7 +132,7 @@ properties:
         form: short
         description: When an item record is created, the default unit of issue is the same as the item format. 
 
-  quantity_in_units_of_issue:
+  quantity_of_units_of_issue:
     P3_MVP: false
     description: indicates how many units of issue is in the item.
     type: number
@@ -199,7 +190,7 @@ properties:
                 - type: string
                 - type: null
             
-            cost_in_CAD:
+            last_purchase_cost:
               description: The expected of the item in the order format
               type: number
               $comment: To TW, in the future, this field should contain a running average of the recent purchase costs, possibly also adjusted for recent inflation.
