--- a/1-Schemas/A-entity_record_schema/32_job_plan.yml
+++ b/1-Schemas/A-entity_record_schema/32_job_plan.yml
@@ -60,7 +60,7 @@ properties:
         spec_ID: 01JD2V5X97J1Y45JWDW4SV1FJ4
         type: [constraint_or_validation]
         specification: |
-          Given an job plan, JP_x, all values of JP_x.specific_to_operational_units must be
+          Given an job plan, jp1, all values of jp1.specific_to_operational_units must be
             - an org-chart group, and
             - whose .class = unit (a subclass of Group in the City)
 
@@ -86,7 +86,7 @@ properties:
         spec_ID: 01JD2V5X97J1Y45JWDW4SV1FJ4
         type: [constraint_or_validation]
         specification: |
-           Given an job plan, JP_x, all values of JP_x.specific_to_commercial_products must be
+           Given an job plan, jp1, all values of jp1.specific_to_commercial_products must be
             - a item master record, and
             - whose .generic_or_specific_product = "specific commercial product"
           
@@ -212,7 +212,7 @@ properties:
       - type: null
       - $ref: "./00_re-used_object_property_definitions.yml#/definitions/meter_condition_definition"
 
-  description_of_event-based_trigger:
+  description_of_event-based_automation_trigger:
     oneOf:
       - type: null
       - type: object
