--- a/1-Schemas/B-entity_class_object_schema/00_re-used_class_property_definitions.yml
+++ b/1-Schemas/B-entity_class_object_schema/00_re-used_class_property_definitions.yml
@@ -16,16 +16,11 @@ definitions:
           - type: null
           - $ref: "#"
 
-      class_description:
+      class_name:
         oneOf:
           - type: null
           - type: string
-
-      can_apply_to_instances:
-        description: indicates if the class can be used to classify any instance
-        type: boolean
-        $comment: |
-          a "FALSE" value indicates that the class is meant to be a structural part of the classification tree, and cannot be used to classify any entity (i.e. asset, functional-location, physical-location, etc).
+            maxLength: 50
       
       synonym_names:
         description: other synonymous names that may be used by a user in search 
@@ -34,7 +29,27 @@ definitions:
           - type: array
             items:
               type: string
+              maxLength: 50
+
+      class_definition:
+        oneOf:
+          - type: null
+          - type: string
+            maxLength: 500
+
+      can_apply_to_instances:
+        description: indicates if the class can be used to classify any instance
+        type: boolean
+        $comment: |
+          a "FALSE" value indicates that the class is meant to be a structural part of the classification tree, and cannot be used to classify any entity (i.e. asset, functional-location, physical-location, etc).
       
       is_a_defined_class_or_category:
-          description: Indicates a class that is only applicable when certain defined conditions of operating context and specifications are met.
-          type: boolean
+        description: Indicates a class that is only applicable when certain defined conditions of operating context and specifications are met.
+        type: boolean
+
+      associated_with_compliance_activity:
+        $ref: "../A-entity_record_schema/00_re-used_object_property_definitions.yml/associated_with_compliance_activities_def"
+
+      
+      
+      
