--- a/1-Schemas/B-entity_class_object_schema/02_functional_location_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/02_functional_location_class.yml
@@ -16,7 +16,7 @@ properties:
       - type: null
       - $ref: B-entity_class_object_schema/01_physical_entity_and_functional_location_class.yml
 
-  class_description:
+  class_name:
     oneOf:
       - type: null
       - type: string
